# chrome-workspace-toolkit

./: .gitignore  CWT_requirements_updated.txt  README.md  check_env.py  debug_minimal_project.py  main.py  main_clean.py  main_minimal.py  main_stepwise.py  tk_test.py
core/: restore.py  (+2 more)
cwt/: .gitignore  LICENSE.md  NOTICE.txt  __init__.py  debug_minimal_project.py  main.py  main_clean.py  main_patch_database_init.py  main_stepwise.py  pyproject.toml
cwt/core/: __init__.py  cwt_schema.sql  database.py  restore.py  snapshot_capture.py
cwt/data/: cwt_state.sqlite
cwt/gui/: main_window.py  profile_tab.py  session_tab.py  shortcut_tab.py  snapshot_tab.py  snapshot_tab_cleaned.py  snapshot_tab_styled.py  utilities_tab.py  workspace_tab.py  workspace_tab_GUI_model.py  workspace_tab_from_ChatGPT.py
cwt/scripts/: patch_preferences.py
cwt/snapshots/: snapshot_2025-04-01_21-09-37.json
cwt/snapshots/Debug_Workspace/: snapshot_Apr0825_1159.json
cwt/snapshots/My First Workspace/: snapshot_Apr0825_0935.json
cwt/snapshots/SS.24-Feb-2026_2351/: snapshot_24-Feb-2026_2351.json
cwt/snapshots/SS.24-Feb-2026_2356/: snapshot_24-Feb-2026_2356.json
cwt/snapshots/SS.24-Feb-26_2330/: snapshot_Feb2426_2330.json
cwt/snapshots/SS.24-Feb-26_2345/: snapshot_24-Feb-26_2345.json
cwt/snapshots/Test #2/: snapshot_Apr0225_1916.json  snapshot_Apr0225_1953.json  snapshot_Apr0225_2121.json  snapshot_Apr0225_2136.json
cwt/tools/: __init__.py
cwt/utils/: database_utils.py  debug_logger.py  get_all_visible_windows.py  paths.py  shortcut_tab_resolved.py  tooltip.py  vda_utils.py
(+55 files in other folders)
